--- a/Exercício 2/style.css
+++ b/Exercício 2/style.css
@@ -3,5 +3,5 @@ body{
     background-color: gainsboro;
     font-size: weight large;
     font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: comic-sans;
 }
